--- a/site/pages/blog/2022-08-03-why-ipso.md
+++ b/site/pages/blog/2022-08-03-why-ipso.md
@@ -11,7 +11,7 @@ enjoy using. Something that would make writing glue code and throwaway scripts f
 
 It follows that any attempts by me to *convince* or *persuade* you to use this language would be in
 poor taste. Just as I wouldn't argue that you should start liking
-[Meshuggah](https://www.youtube.com/watch?v=eX4GOltUDdA) or [pinapple on
+[Meshuggah](https://www.youtube.com/watch?v=eX4GOltUDdA) or [pineapple on
 pizza](https://en.wikipedia.org/wiki/Hawaiian_pizza), I won't argue that you should value what
 `ipso` has to offer. To each their own.
 
